# umwelten

./: NOTES.md  README.md  central.py  device_driver.py  pattern_lib.py  unified_interface.py  waveform.py
rp2040_rust/: Cargo.toml  NOTES.md
rp2040_rust/src/: i2c.rs  spi.rs
rust-pico-project-master/: Cargo.toml  blinky.rs  spi.rs  umwelten.code-workspace
tmp/: central.py  device_driver.py  pattern_lib.py  unified_interface.py  waveform_utils.py
