[package]
name = "rp2040_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal = "0.2.5"
rp2040-hal = "0.9.0"
fugit = "0.3.6"
cortex-m = "0.7.2"
cortex-m-rt = "0.7"
cortex-m-rtic = "1.1.4"
panic-halt = "0.2.0"
rp2040-boot2 = "0.3.0"
hd44780-driver = "0.4.0"
pio-proc = "0.2.0"
dht-sensor = "0.2.1"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"